fix chat overflow

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -43,10 +43,13 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  list-style: none;
+  overflow: hidden;
+  overflow-y:scroll;
   width: 30%;
 }
 
-#chat-messages p {
+#chat-messages li {
   margin: 0;
   padding: 0;
 }
